language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_labels_all_fields_have_matching_variables.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Player {\n    Player(name: String, age: Int, team: String)\n}\n\npub fn main() {\n    let name = \"Priya\"\n    let age = 25\n    let team = \"BLU\"\n    Player()\n}\n"
---
----- BEFORE ACTION

pub type Player {
    Player(name: String, age: Int, team: String)
}

pub fn main() {
    let name = "Priya"
    let age = 25
    let team = "BLU"
    Player()
    ↑       
}


----- AFTER ACTION

pub type Player {
    Player(name: String, age: Int, team: String)
}

pub fn main() {
    let name = "Priya"
    let age = 25
    let team = "BLU"
    Player(name:, age:, team:)
}
