language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_labels_falls_back_to_todo_when_type_does_not_match.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Player {\n    Player(name: String, team: String)\n}\n\npub fn main() {\n    let name = 1\n    Player(team: \"BLU\")\n}\n"
---
----- BEFORE ACTION

pub type Player {
    Player(name: String, team: String)
}

pub fn main() {
    let name = 1
    Player(team: "BLU")
    ↑                  
}


----- AFTER ACTION

pub type Player {
    Player(name: String, team: String)
}

pub fn main() {
    let name = 1
    Player(team: "BLU", name: todo)
}
