language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_labels_inside_anonymous_function.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Player {\n    Player(name: String, team: String)\n}\n\npub fn main() {\n    let name = \"Outer\"\n    let callback = fn() {\n        let name = \"Inner\"\n        Player(team: \"BLU\")\n    }\n}\n"
---
----- BEFORE ACTION

pub type Player {
    Player(name: String, team: String)
}

pub fn main() {
    let name = "Outer"
    let callback = fn() {
        let name = "Inner"
        Player(team: "BLU")
        ↑                  
    }
}


----- AFTER ACTION

pub type Player {
    Player(name: String, team: String)
}

pub fn main() {
    let name = "Outer"
    let callback = fn() {
        let name = "Inner"
        Player(team: "BLU", name:)
    }
}
