language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_labels_multiple_fields_some_matching.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Player {\n    Player(name: String, age: Int, team: String)\n}\n\npub fn main() {\n    let name = \"Priya\"\n    let age = \"not an int\"\n    Player()\n}\n"
---
----- BEFORE ACTION

pub type Player {
    Player(name: String, age: Int, team: String)
}

pub fn main() {
    let name = "Priya"
    let age = "not an int"
    Player()
    ↑       
}


----- AFTER ACTION

pub type Player {
    Player(name: String, age: Int, team: String)
}

pub fn main() {
    let name = "Priya"
    let age = "not an int"
    Player(name:, age: todo, team: todo)
}
