language-server/src/tests/snapshots/gleam_language_server__tests__action__fill_labels_nested_pattern_constructor.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wibble {\n  Wibble(a: Int, b: Float, c: String)\n  Wobble(d: Bool, e: BitArray, f: List(Result(String, Nil)))\n}\n\npub fn main() {\n  case todo {\n    #([Wobble()], 2, 3) -> todo\n    _ -> todo\n  }\n}\n"
---
----- BEFORE ACTION

pub type Wibble {
  Wibble(a: Int, b: Float, c: String)
  Wobble(d: Bool, e: BitArray, f: List(Result(String, Nil)))
}

pub fn main() {
  case todo {
    #([Wobble()], 2, 3) -> todo
       ↑                       
    _ -> todo
  }
}


----- AFTER ACTION

pub type Wibble {
  Wibble(a: Int, b: Float, c: String)
  Wobble(d: Bool, e: BitArray, f: List(Result(String, Nil)))
}

pub fn main() {
  case todo {
    #([Wobble(d:, e:, f:)], 2, 3) -> todo
    _ -> todo
  }
}
